fix title spacing

--- a/assets/styles/shared.css
+++ b/assets/styles/shared.css
@@ -52,14 +52,14 @@ h1, h2, h3 {
     color: var(--title-color);
     margin: 0;
     line-height: 1.1;
-    letter-spacing: -1px;
+    letter-spacing: -0.25px;
 }
 h4, h5, h6 {
     font-weight: 700;
     color: var(--text-color);
     margin: 0;
     line-height: 1;
-    letter-spacing: -0.5px;
+    letter-spacing: -0.125px;
 }
 h1 {
     font-size: 2.5rem;
